# stock-news-rag-app

./: .env.example  .gitignore  app.py  pyproject.toml  requirements.txt
eval/: eval.py
rag/: __init__.py  cli.py  embedder.py  news_fetcher.py  pipeline.py  vector_store.py
