[project]
name = "news-rag-app"
version = "0.1.0"
description = "Why Is My Stock Moving? — RAG app grounding stock answers in real news"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40.0",
    "yfinance>=0.2.50",
    "openai>=1.50.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.26.0",
    "groq>=0.11.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag"]

[project.scripts]
news-rag = "rag.cli:run_app"
